update styles and configuration; adjust z-index values, fix CSS top property, and enable task options

--- a/front/src/components/popup/_popup.sass
+++ b/front/src/components/popup/_popup.sass
@@ -13,7 +13,7 @@
     padding-bottom: 1rem
     border-radius: 10px 10px 0 0
     animation: PopupOpenPC 1s ease-in-out forwards
-    z-index: 100
+    z-index: 300
     @media screen and (max-width: $layout-breakpoint-tablet-max)
 
     div
@@ -103,7 +103,7 @@
 .scroll
     position: fixed
     z-index: 100
-    top: 10
+    top: 10px
     left: 50%
     transform: translateX(-50%)
     width: 75dvw
