--- a/front/src/sass/style.css
+++ b/front/src/sass/style.css
@@ -13,7 +13,7 @@
   padding-bottom: 1rem;
   border-radius: 10px 10px 0 0;
   animation: PopupOpenPC 1s ease-in-out forwards;
-  z-index: 100;
+  z-index: 300;
 }
 .PopupPC div {
   display: flex;
@@ -116,7 +116,7 @@
 .scroll {
   position: fixed;
   z-index: 100;
-  top: 10;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
   width: 75dvw;
